--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@ select:focus {
     /* Far outer glow */
 }
 
-.search-button {
+/*.search-button {
     display: inline-block;
     padding: 15px 25px;
     margin: 10px 0;
@@ -223,14 +223,11 @@ select:focus {
     text-decoration: none;
     font-size: 18px;
     box-shadow: 0 0 5px #ff43a4,
-        /* Inner glow */
         0 0 10px #ff43a4,
-        /* Middle glow */
+
         0 0 15px #ff43a4,
-        /* Outer glow */
         0 0 2px #ff43a4;
-    /* Far outer glow */
-}
+}*/
 
 
 
