--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@ select:focus {
     /* Far outer glow */
 }
 
-/*.search-button {
+.search-button {
     display: inline-block;
     padding: 15px 25px;
     margin: 10px 0;
@@ -223,33 +223,33 @@ select:focus {
     text-decoration: none;
     font-size: 18px;
     box-shadow: 0 0 5px #ff43a4,
+        /* Inner glow */
         0 0 10px #ff43a4,
-
+        /* Middle glow */
         0 0 15px #ff43a4,
+        /* Outer glow */
         0 0 2px #ff43a4;
-}*/
+}
 
 
 
-input[type="submit"] {
+/*input[type="submit"] {
     background-color: #00ff41;
-    /* Neon green for buttons */
-    color: #fff;
+       color: #fff;
     border: none;
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    /* Smooth transition */
+   
     box-shadow: 0 0 5px #00ff41,
-        /* Inner glow */
+    
         0 0 10px #00ff41,
-        /* Middle glow */
+       
         0 0 15px #00ff41,
-        /* Outer glow */
+     
         0 0 20px #00ff41;
-    /* Far outer glow */
-}
+}*/
 
 input[type="submit"]:hover {
     background-color: #ff43a4;
@@ -345,6 +345,7 @@ label {
 
 
 .button {
+    
     display: inline-block;
     padding: 10px 20px;
     margin: 10px;
