--- a/styles.css
+++ b/styles.css
@@ -28,27 +28,9 @@ input[type="text"]:focus {
     /* Far outer glow */
 }
 
-/*input[type="submit"] {
-            background-color: #00ff41;
-           
-            color: #fff;
-            border: none;
-            padding: 10px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: all 0.3s ease-in-out;
-            
-            box-shadow: 0 0 5px #00ff41,
-                
-                0 0 10px #00ff41,
-               
-                0 0 15px #00ff41,
-               
-                0 0 20px #00ff41; } */
 
 
 .button:hover {
-
     background-color: #00ff41;
     /* Neon pink for button hover */
     box-shadow: 0 0 5px #00ff41,
@@ -81,18 +63,7 @@ input[type="text"]:focus {
     }
 }
 
-input[type="submit"]:hover {
-    background-color: #ff43a4;
-    /* Neon pink for button hover */
-    box-shadow: 0 0 5px #ff43a4,
-        /* Inner glow */
-        0 0 10px #ff43a4,
-        /* Middle glow */
-        0 0 15px #ff43a4,
-        /* Outer glow */
-        0 0 20px #ff43a4;
-    /* Far outer glow */
-}
+
 
 body {
     font-family: Arial, sans-serif;
@@ -103,6 +74,7 @@ body {
     color: #f5f5f5;
     /* Light text */
 }
+
 .admin-body
 {
     display: flex;
@@ -113,13 +85,29 @@ body {
     margin: 0;
     background-color: #0d0c22;
     /* Dark background */
-    color: #f5f5f5;
+}
+
+.header {
+    color: #ff43a4; 
+    /*bold text*/
+    font-size: 40px;
 }
 
 
 .container {
     width: 100%;
     max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.table-container2 {
+    width: 80%;
+    max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     display: flex;
@@ -140,6 +128,7 @@ h2 {
     margin-bottom: 5px;
     margin-top: 20px;
 }
+
 
 .selected {
     background-color: #ff43a4;
@@ -244,39 +233,17 @@ select:focus {
         0 0 2px #ff43a4;
 }
 
-
-
-/*input[type="submit"] {
+.search-button:hover {
     background-color: #00ff41;
-       color: #fff;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-   
     box-shadow: 0 0 5px #00ff41,
-    
-        0 0 10px #00ff41,
-       
-        0 0 15px #00ff41,
-     
-        0 0 20px #00ff41;
-}*/
-
-input[type="submit"]:hover {
-    background-color: #ff43a4;
-    /* Neon pink for button hover */
-    box-shadow: 0 0 5px #ff43a4,
         /* Inner glow */
-        0 0 10px #ff43a4,
+        0 0 10px #00ff41,
         /* Middle glow */
-        0 0 15px #ff43a4,
+        0 0 15px #00ff41,
         /* Outer glow */
-        0 0 20px #ff43a4;
+        0 0 2px #00ff41;
     /* Far outer glow */
 }
-
 
 
 
@@ -284,9 +251,12 @@ input[type="submit"]:hover {
     display: block;
     margin-bottom: 10px;
     /* Space between label and select/input */
-    color: #ff43a4;
-    font-weight: bold;
-    /* Neon pink for labels */
+    color: #fff;
+    /*font-weight:lighter;*/
+    font-size: 18px;
+    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+    font-family: 'IBM Plex Mono', monospace;
+    
 }
 
 .form-select,
