--- a/styles.css
+++ b/styles.css
@@ -1,440 +1,352 @@
 input[type="text"] {
-    background-color: #1f1b33;
-    /* Darker background for input */
-    color: #00ff41;
-    /* Neon green for input text */
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px #00ff41,
-        /* Inner glow */
-        0 0 10px #00ff41,
-        /* Middle glow */
-        0 0 15px #00ff41,
-        /* Outer glow */
-        0 0 20px #00ff41;
-    /* Far outer glow */
+  background-color: #1f1b33;
+  /* Darker background for input */
+  color: #00ff41;
+  /* Neon green for input text */
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #00ff41, /* Inner glow */ 0 0 10px #00ff41,
+    /* Middle glow */ 0 0 15px #00ff41, /* Outer glow */ 0 0 20px #00ff41;
+  /* Far outer glow */
 }
 
 input[type="text"]:focus {
-    outline: none;
-    box-shadow: 0 0 5px #ff43a4,
-        /* Inner glow */
-        0 0 10px #ff43a4,
-        /* Middle glow */
-        0 0 15px #ff43a4,
-        /* Outer glow */
-        0 0 20px #ff43a4;
-    /* Far outer glow */
+  outline: none;
+  box-shadow: 0 0 5px #ff43a4, /* Inner glow */ 0 0 10px #ff43a4,
+    /* Middle glow */ 0 0 15px #ff43a4, /* Outer glow */ 0 0 20px #ff43a4;
+  /* Far outer glow */
 }
 
-
-
 .button:hover {
-    cursor: pointer;
-    background-color: #00ff41;
-    /* Neon pink for button hover */
-    box-shadow: 0 0 5px #00ff41,
-        /* Inner glow */
-        0 0 10px #00ff41,
-        /* Middle glow */
-        0 0 15px #00ff41,
-        /* Outer glow */
-        0 0 5px #00ff41;
-    /* Far outer glow */
+  cursor: pointer;
+  background-color: #00ff41;
+  /* Neon pink for button hover */
+  box-shadow: 0 0 5px #00ff41, /* Inner glow */ 0 0 10px #00ff41,
+    /* Middle glow */ 0 0 15px #00ff41, /* Outer glow */ 0 0 5px #00ff41;
+  /* Far outer glow */
 }
 
 .loader {
-    border: 16px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 16px solid #3498db;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
-    display: none;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  display: none;
 }
 
 @keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
 
-    100% {
-        transform: rotate(360deg);
-    }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-
-
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #0d0c22;
-    /* Dark background */
-    color: #f5f5f5;
-    /* Light text */
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #0d0c22;
+  /* Dark background */
+  color: #f5f5f5;
+  /* Light text */
 }
 
 /* centered body */
-.admin-body
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #0d0c22;
-    /* Dark background */
+.admin-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #0d0c22;
+  /* Dark background */
 }
 
 .header {
-    color: #ff43a4; 
-    /*bold text*/
-    font-size: 40px;
+  color: #ff43a4;
+  /*bold text*/
+  font-size: 40px;
 }
-
 
 .container {
-    width: 100%;
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
 
 .table-container2 {
-    width: 80%;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 80%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-
 .selected {
-    background-color: #ff43a4;
-    /* Neon pink for selected row */
+  background-color: #ff43a4;
+  /* Neon pink for selected row */
 }
 
 h2 {
-    color: #00ff41;
-    /* Neon green for headers */
-    /* adjust padding */
-    margin-bottom: 5px;
-    margin-top: 20px;
+  color: #00ff41;
+  /* Neon green for headers */
+  /* adjust padding */
+  margin-bottom: 5px;
+  margin-top: 20px;
 }
-
-
-.selected {
-    background-color: #ff43a4;
-    /* Neon pink for selected row */
-}
-
 
 select {
-    background-color: #1f1b33;
-    /* Darker background for select */
-    color: #00ff41;
-    /* Neon green for select text */
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px #00ff41,
-        /* Inner glow */
-        0 0 10px #00ff41,
-        /* Middle glow */
-        0 0 15px #00ff41,
-        /* Outer glow */
-        0 0 20px #00ff41;
-    /* Far outer glow */
+  background-color: #1f1b33;
+  /* Darker background for select */
+  color: #00ff41;
+  /* Neon green for select text */
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #00ff41, /* Inner glow */ 0 0 10px #00ff41,
+    /* Middle glow */ 0 0 15px #00ff41, /* Outer glow */ 0 0 20px #00ff41;
+  /* Far outer glow */
 }
 
 select:focus {
-    outline: none;
-    box-shadow: 0 0 5px #ff43a4,
-        /* Inner glow */
-        0 0 10px #ff43a4,
-        /* Middle glow */
-        0 0 15px #ff43a4,
-        /* Outer glow */
-        0 0 20px #ff43a4;
-    /* Far outer glow */
+  outline: none;
+  box-shadow: 0 0 5px #ff43a4, /* Inner glow */ 0 0 10px #ff43a4,
+    /* Middle glow */ 0 0 15px #ff43a4, /* Outer glow */ 0 0 20px #ff43a4;
+  /* Far outer glow */
 }
-
 
 .bold-center {
-    text-align: center;
-    font-weight: bold;
-    color: #ff43a4;
-    /* Neon pink for headers */
+  text-align: center;
+  font-weight: bold;
+  color: #ff43a4;
+  /* Neon pink for headers */
 }
 
-
 .back-button {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    display: inline-block;
-    padding: 15px 25px;
-    margin-top: 20px;
-    color: #fff;
-    background-color: #ff43a4;
-    font-size: 18px;
-    /* Neon green for buttons */
-    text-decoration: none;
-    border-radius: 5px;
-    transition: all 0.3s ease-in-out;
-    /* Smooth transition */
-    box-shadow: 0 0 5px #ff43a4,
-        /* Inner glow */
-        0 0 10px #ff43a4,
-        /* Middle glow */
-        0 0 15px #ff43a4,
-        /* Outer glow */
-        0 0 2px #ff43a4;
-    /* Far outer glow */
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: inline-block;
+  padding: 15px 25px;
+  margin-top: 20px;
+  color: #fff;
+  background-color: #ff43a4;
+  font-size: 18px;
+  /* Neon green for buttons */
+  text-decoration: none;
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out;
+  /* Smooth transition */
+  box-shadow: 0 0 5px #ff43a4, /* Inner glow */ 0 0 10px #ff43a4,
+    /* Middle glow */ 0 0 15px #ff43a4, /* Outer glow */ 0 0 2px #ff43a4;
+  /* Far outer glow */
 }
 
 .back-button:hover {
-    background-color: #00ff41;
-    /* Neon pink for button hover */
-    box-shadow: 0 0 5px #00ff41,
-        /* Inner glow */
-        0 0 10px #00ff41,
-        /* Middle glow */
-        0 0 15px #00ff41,
-        /* Outer glow */
-        0 0 2px #00ff41;
-    /* Far outer glow */
+  background-color: #00ff41;
+  /* Neon pink for button hover */
+  box-shadow: 0 0 5px #00ff41, /* Inner glow */ 0 0 10px #00ff41,
+    /* Middle glow */ 0 0 15px #00ff41, /* Outer glow */ 0 0 2px #00ff41;
+  /* Far outer glow */
 }
 
 .search-button {
-    cursor: pointer;
-    display: inline-block;
-    padding: 15px 25px;
-    margin: 10px 0;
-    margin-left: 20px;
-    color: #fff;
-    background-color: #ff43a4;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    font-size: 18px;
-    box-shadow: 0 0 5px #ff43a4,
-        /* Inner glow */
-        0 0 10px #ff43a4,
-        /* Middle glow */
-        0 0 15px #ff43a4,
-        /* Outer glow */
-        0 0 2px #ff43a4;
+  cursor: pointer;
+  display: inline-block;
+  padding: 15px 25px;
+  margin: 10px 0;
+  margin-left: 20px;
+  color: #fff;
+  background-color: #ff43a4;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 18px;
+  box-shadow: 0 0 5px #ff43a4, /* Inner glow */ 0 0 10px #ff43a4,
+    /* Middle glow */ 0 0 15px #ff43a4, /* Outer glow */ 0 0 2px #ff43a4;
 }
 
 .search-button:hover {
-    background-color: #00ff41;
-    box-shadow: 0 0 5px #00ff41,
-        /* Inner glow */
-        0 0 10px #00ff41,
-        /* Middle glow */
-        0 0 15px #00ff41,
-        /* Outer glow */
-        0 0 2px #00ff41;
-    /* Far outer glow */
+  background-color: #00ff41;
+  box-shadow: 0 0 5px #00ff41, /* Inner glow */ 0 0 10px #00ff41,
+    /* Middle glow */ 0 0 15px #00ff41, /* Outer glow */ 0 0 2px #00ff41;
+  /* Far outer glow */
 }
 
-
-
 .form-label {
-    display: block;
-    margin-bottom: 10px;
-    /* Space between label and select/input */
-    color: #fff;
-    /*font-weight:lighter;*/
-    font-size: 18px;
-    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-    font-family: 'IBM Plex Mono', monospace;
+  display: block;
+  margin-bottom: 10px;
+  /* Space between label and select/input */
+  color: #fff;
+  /*font-weight:lighter;*/
+  font-size: 18px;
+  @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+  font-family: "IBM Plex Mono", monospace;
 }
 
 .form-select,
 .form-input {
-    width: 100%;
-    margin-bottom: 20px;
-    /* Space between select/input and the next element */
+  width: 100%;
+  margin-bottom: 20px;
+  /* Space between select/input and the next element */
 }
 
 tr.selected,
 tr:hover.selected {
-    background-color: #ff43a4;
-    /* Neon pink for selected row */
-    box-shadow: 0 0 5px #ff43a4,
-        /* Inner glow */
-        0 0 10px #ff43a4,
-        /* Middle glow */
-        0 0 15px #ff43a4,
-        /* Outer glow */
-        0 0 20px #ff43a4;
-    /* Far outer glow */
+  background-color: #ff43a4;
+  /* Neon pink for selected row */
+  box-shadow: 0 0 5px #ff43a4, /* Inner glow */ 0 0 10px #ff43a4,
+    /* Middle glow */ 0 0 15px #ff43a4, /* Outer glow */ 0 0 20px #ff43a4;
+  /* Far outer glow */
 }
 
-
-
 input[type="number"] {
-    background-color: #1f1b33;
-    /* Darker background for input */
-    color: #00ff41;
-    /* Neon green for input text */
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px #00ff41,
-        /* Inner glow */
-        0 0 10px #00ff41,
-        /* Middle glow */
-        0 0 15px #00ff41,
-        /* Outer glow */
-        0 0 20px #00ff41;
-    /* Far outer glow */
+  background-color: #1f1b33;
+  /* Darker background for input */
+  color: #00ff41;
+  /* Neon green for input text */
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #00ff41, /* Inner glow */ 0 0 10px #00ff41,
+    /* Middle glow */ 0 0 15px #00ff41, /* Outer glow */ 0 0 20px #00ff41;
+  /* Far outer glow */
 }
 
 input[type="number"]:focus {
-    outline: none;
-    box-shadow: 0 0 5px #ff43a4,
-        /* Inner glow */
-        0 0 10px #ff43a4,
-        /* Middle glow */
-        0 0 15px #ff43a4,
-        /* Outer glow */
-        0 0 20px #ff43a4;
-    /* Far outer glow */
+  outline: none;
+  box-shadow: 0 0 5px #ff43a4, /* Inner glow */ 0 0 10px #ff43a4,
+    /* Middle glow */ 0 0 15px #ff43a4, /* Outer glow */ 0 0 20px #ff43a4;
+  /* Far outer glow */
 }
 
 label {
-    color: #ff43a4;
-    /* Neon pink for labels */
+  color: #ff43a4;
+  /* Neon pink for labels */
 }
 
 .form-label,
 .form-select,
 .form-input {
-    /* ...existing styles... */
-    width: 80%;
-    /* Adjust as needed */
+  /* ...existing styles... */
+  width: 80%;
+  /* Adjust as needed */
 }
-
-
 
 .button {
-    cursor: pointer;
-    display: inline-block;
-    padding: 10px 20px;
-    margin: 10px;
-    color: #fff;
-    border: none;
-    background-color: #ff43a4;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    font-size: 20px;
-    transition: all 0.3s ease-in-out;
-    /* Smooth transition */
-    box-shadow: 0 0 5px #ff43a4,
-        /* Inner glow */
-        0 0 10px #ff43a4,
-        /* Middle glow */
-        0 0 15px #ff43a4,
-        /* Outer glow */
-        0 0 1px #ff43a4;
-    /* Far outer glow */
+  cursor: pointer;
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 10px;
+  color: #fff;
+  border: none;
+  background-color: #ff43a4;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 20px;
+  transition: all 0.3s ease-in-out;
+  /* Smooth transition */
+  box-shadow: 0 0 5px #ff43a4, /* Inner glow */ 0 0 10px #ff43a4,
+    /* Middle glow */ 0 0 15px #ff43a4, /* Outer glow */ 0 0 1px #ff43a4;
+  /* Far outer glow */
 }
-
 
 input.button {
-    display: inline-block;
-    padding: 15px 25px;
-    margin: 10px 0;
-    color: #fff;
-    background-color: #ff43a4;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    font-size: 18px;
-    box-shadow: 0 0 5px #ff43a4,
-        /* Inner glow */
-        0 0 10px #ff43a4,
-        /* Middle glow */
-        0 0 15px #ff43a4,
-        /* Outer glow */
-        0 0 2px #ff43a4;
-    /* Far outer glow */
+  display: inline-block;
+  padding: 15px 25px;
+  margin: 10px 0;
+  color: #fff;
+  background-color: #ff43a4;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 18px;
+  box-shadow: 0 0 5px #ff43a4, /* Inner glow */ 0 0 10px #ff43a4,
+    /* Middle glow */ 0 0 15px #ff43a4, /* Outer glow */ 0 0 2px #ff43a4;
+  /* Far outer glow */
 }
 
-
-
-
 table {
-    width: 100%;
-    border-collapse: collapse;
-    box-shadow: 0px 0px 30px 2px #ff43a4;
-    /* Neon pink shadow for the table */
-
+  width: 100%;
+  border-collapse: collapse;
+  box-shadow: 0px 0px 30px 2px #ff43a4;
+  /* Neon pink shadow for the table */
 }
 
 th,
 td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
 }
 
 /* column headers */
 th {
-    background-color: #1f1b33;
-    /* Darker background for table headers */
-    color: #00ff41;
-    /* Neon green for table headers */
+  background-color: #1f1b33;
+  /* Darker background for table headers */
+  color: #00ff41;
+  /* Neon green for table headers */
 }
 
 /* table rows */
 tr {
-    transition: all 0.3s ease-in-out;
-    /* Smooth transition */
+  transition: all 0.3s ease-in-out;
+  /* Smooth transition */
 }
 
 tr:hover {
-    background-color: #27233a;
-    /* Slightly lighter background for hover */
-    box-shadow: 0 0 5px #00ff41,
-        /* Inner glow */
-        0 0 10px #00ff41,
-        /* Middle glow */
-        0 0 15px #00ff41,
-        /* Outer glow */
-        0 0 20px #00ff41;
-    /* Far outer glow */
-
+  background-color: #27233a;
+  /* Slightly lighter background for hover */
+  box-shadow: 0 0 5px #00ff41, /* Inner glow */ 0 0 10px #00ff41,
+    /* Middle glow */ 0 0 15px #00ff41, /* Outer glow */ 0 0 20px #00ff41;
+  /* Far outer glow */
 }
 
-
 p {
-    color: #f5f5f5;
-    /* Light text */
-    text-align: center;
-    margin-top: 3;
+  color: #f5f5f5;
+  /* Light text */
+  text-align: center;
+  margin-top: 3;
 }
 
 /* index mouse cursor */
 #searchTable th {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* index mouse cursor */
 #songTable td {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+/* index mouse cursor */
+
+#priorityQueueTable,
+#normalQueueTable td {
+  cursor: pointer;
+  /*center table*/
+}
+
+.dj-body {
+  align-items: center;
+  max-width: 800px; /* Adjust the width as needed */
+  margin: 0 auto; /* Center the table horizontally */
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  background-color: #0d0c22;
 }
