--- a/styles.css
+++ b/styles.css
@@ -335,11 +335,11 @@ p {
 
 /* index mouse cursor */
 
-#priorityQueueTable,
-#normalQueueTable td {
+#priorityQueueTable tr:not(:first-child) td,
+#normalQueueTable tr:not(:first-child) td {
   cursor: pointer;
-  /*center table*/
 }
+
 
 .dj-body {
   align-items: center;
