--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ select:focus {
   /* Space between label and select/input */
   color: #fff;
   /*font-weight:lighter;*/
-  font-size: 18px;
+  font-size: 21px;
   @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
   font-family: "IBM Plex Mono", monospace;
 }
@@ -349,4 +349,11 @@ p {
   display: flex;
   flex-direction: column;
   background-color: #0d0c22;
+}
+
+
+.main-header {
+  /*color cyan*/
+  color: #00f7ff;
+  font-size: 40px;
 }
